<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="chat">Chat Activity</string>
    <string name="chat_text">Chat</string>
    <string name="remove">Remove</string>
    <string name="contact">Contact Activity</string>
    <string name="recommend">Recommend Activity</string>
    <string name="history">History Activity</string>
    <string name="user_id">UserID</string>
    <string name="password">Password</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_location">Location</string>
    <string name="menu_settings">Settings</string>
    <string name="main_description">This is a basic Activity showing an Action Bar which has been
        styled.
    </string>
    <string name="run">Run</string>
    <string name="we_run">WeRun</string>
    <string name="ok">OK</string>
    <string name="add_friend_hint">add new friend here</string>

    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="location_ca">Location:CA</string>
    <string name="personal_info">Info: AAA</string>
    <string name="add_friend">Add friend</string>
    <string name="pushen">Pushen</string>
    <string name="last_night">Last Night</string>
    <string name="come_on">Come on</string>
    <string name="agree">Agree</string>
    <string name="zheng">Zheng</string>
    <string name="total_run">Total run</string>
    <string name="total_miles">15000 miles</string>
    <string name="reject">Reject</string>
    <string name="energy_consumption">Energy consumption</string>
    <string name="total_kals">10000Kal</string>
    <string name="total_time">Total time</string>
    <string name="total_hour">250 hours</string>
    <string name="pushen_wants_add_friend">Pushen wants to connect with you</string>
    <string name="stop">Stop</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="take_photo">Take Photo</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mainpage">Map</string>
    <string name="title_activity_runningpage">Result</string>
    <string name="title_activity_tabSelect">TabSelect</string>
    <string name="title_activity_recommend">Recommend</string>
    <string name="title_activity_chat_window">Chat Window</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_profile_and_remove">Profile and Remove</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_shake_activity_to_be_added_into_recommend">
        ShakeActivityToBeAddedIntoRecommend
    </string>



</resources>