<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:id="@+id/chat_history_linearlayout"
    android:layout_height="fill_parent"
    android:background="#fcfcfc"
    tools:context="ui.Chathistory"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/chat_history_relativelayout1"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/bar"
        android:gravity="center_vertical"  >


        <TextView
            android:id="@+id/chat_history_bartextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_run"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:id="@+id/chat_relative"
        android:clickable="true"
        android:onClick="startchat" >

        <ImageView
            android:id="@+id/chat_history_imageview1"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"
            android:src="@drawable/pushen" />

        <TextView
            android:id="@+id/chat_history_textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/chat_history_imageview1"
            android:padding="7dp"
            android:text="@string/pushen"
            android:textColor="#000" />
        <TextView
            android:id="@+id/chat_history_textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="7dp"
            android:text="@string/last_night"
            android:textColor="#666" />
        <TextView
            android:id="@+id/chat_history_textview3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/chat_history_imageview1"
            android:layout_alignParentBottom="true"
            android:padding="7dp"
            android:text="@string/come_on"
            android:textColor="#666" />
    </RelativeLayout>

    <ListView
        android:id="@+id/chat_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>


</LinearLayout>
