<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fcfcfc"
    tools:context="ui.Contact"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:id="@+id/contact_title"
        android:background="@drawable/bar"
        android:gravity="center_vertical"  >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_run"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textColor="#ffffff" />
    </RelativeLayout>



    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/search_bar"
                android:hint="add new friend here"
                android:minWidth="500dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/searchbaricon"
                android:textColor="#FFFFFF"
                android:id="@+id/search_button"
                android:paddingTop="32sp"
                android:drawablePadding="-15sp"
                android:layout_column="19" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:id="@+id/relativeLayout"
                 >

                <ImageView
                    android:id="@+id/request_imageView"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="5dp"
                    android:src="@drawable/pushen" />

                <TextView
                    android:id="@+id/request_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/request_imageView"
                    android:padding="7dp"
                    android:text="@string/pushen_wants_add_friend"
                    android:textColor="#000" />

            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/request_text"
                android:text="@string/agree"
                android:id="@+id/agree_button"
                android:layout_column="19" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:id="@+id/contact_relative"
                >
                <ImageView
                    android:id="@+id/contact_head"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="5dp"
                    android:src="@drawable/zheng"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/contact_head"
                    android:padding="7dp"
                    android:text="@string/zheng"
                    android:textColor="#000" />


            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

    </TableLayout>

</LinearLayout>
